# ble_multimeter

./: .gitignore  README.md  protocol.txt  pyproject.toml
ble_multimeter/: bit_flag_decoder.py  ble_commands.py  cli.py  mm_ble_message.py
tests/: test_mm_ble_message.py  vdc_data_stream.py
